# Nyaa-Notifications

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RECENT_CHANGES.md  sqlx-data.json
.github/workflows/: tag_release.yml
migrations/: 20220911123513_main.sql  20230114135944_front.sql
src/: config.rs  database.rs  discord.rs  html.rs  main.rs  notifications.rs  web.rs
src/commands/: activity.rs  create.rs  help.rs  mod.rs  pause.rs  pause_unpause.rs  reset.rs
