[package]
name = "nyaa-notifs"
version = "0.1.14"
edition = "2021"
description = "Utility to monitor entries found on the popular torrent page nyaa.si"
authors = ["Vernoxvernax"]
readme = "README.md"
repository = "https://github.com/Vernoxvernax/Nyaa-Notifications"
license = "MIT"

[dependencies]
lettre = { version = "0.10.4", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
serenity = { version = "0.11.5", features = ["collector", "rustls_backend"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "offline"] }
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"
chrono = "0.4.24"
isahc = "1.7.2"
http = "0.2.9"
html-escape = "0.2.13"
