[package]
name = "nyaa-notifications"
description = "Utility to monitor uploads and their comments on the popular site nyaa.si"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["DepriSheep"]
repository = "https://github.com/Vernoxvernax/Nyaa-Notifications"

[dependencies]
lettre = { version = "0.11.4", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1.36.0", features = ["full"] }
html-escape = "0.2.13"
lazy_static = "1.4.0"
serde = "1.0.197"
serde_json = "1.0.114"
toml = "0.8.10"
chrono = "0.4.34"
isahc = "1.7.2"
regex = "1.10.3"
serenity = "0.12.1"
log = "0.4.21"
env_logger = "0.11.3"
